updated(feature/movieactors):fixed get data repository
